# blockdns

./: Cargo.toml
deploy/: blockdns.service
src/: dns.rs  main.rs
